<resources>
    <string name="app_name">Museet</string>
    <!-- Strings related to login -->
    <string name="prompt_phone">Phone</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_userType">user Type</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_next">Next</string>
    <string name="action_register">Register</string>
    <string name="action_updateProfile">Update</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_search">Search</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_phone">Phone should be between 9 and 11 numbers</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="invalid_username">Username should be at least 3 characters long</string>
    <string name="invalid_email">Email is not valid</string>
    <string name="invalid_location">Location is not valid</string>
    <string name="invalid_youtube">youtube link is required</string>
    <string name="invalid_type">please select one</string>
    <string name="needHelp">Need Help?</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_signup">Signup</string>
    <string name="prompt_email">Email</string>title_activity_user_options
    <string name="prompt_name">Name</string>
    <string name="prompt_location">Location</string>
    <string name="prompt_youtubeLinks">Youtube Links</string>
    <string name="title_activity_user_options">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="title_notifications">Notifications</string>
    <string name="hyperlink">Register?</string>
    <string name="title_activity_home_options">MainActivity</string>
    <string-array name="userTypeArray">
    <item>Musician</item>
    <item>Band</item>
    </string-array>
</resources>